--- a/scripts/style.css
+++ b/scripts/style.css
@@ -16,7 +16,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 0 4px #989898, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
   width: 96%;
-  text-align: center;
+  text-align: left;
   vertical-align: top;
 }
 
