--- a/scripts/style.css
+++ b/scripts/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 #equityButton {
-  cursor:pointer;
+  cursor: pointer;
   position: relative;
   padding: 10px;
   margin: 10px;
@@ -534,18 +534,18 @@ td.odd {
 }
 
 #submit {
-  cursor:pointer;
-  padding:5px 25px; 
-  background:#35b128; 
-  border:1px solid #33842a;  
+  cursor: pointer;
+  padding: 5px 25px; 
+  background: #35b128; 
+  border: 1px solid #33842a;  
   -moz-border-radius: 10px; 
   -webkit-border-radius: 10px;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 4px rgba(0,0,0, .75);
   -moz-box-shadow: 0 0 4px rgba(0,0,0, .75);
   box-shadow: 0 0 4px rgba(0,0,0, .75);
-  color:#f3f3f3;
-  font-size:1.1em;
+  color: #f3f3f3;
+  font-size: 1.1em;
 }
 
 #submit:active {
@@ -556,72 +556,72 @@ td.odd {
 }
 
 input {
-  outline:none;
+  outline: none;
   transition: all 0.25s ease-in-out;
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
-  border-radius:3px;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  border:1px solid rgba(0,0,0, 0.2);
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border: 1px solid rgba(0,0,0, 0.2);
 }
 
 input:focus {
   box-shadow: 0 0 5px rgba(0, 0, 255, 1);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 255, 1); 
   -moz-box-shadow: 0 0 5px rgba(0, 0, 255, 1);
-  border:1px solid rgba(0,0,255, 0.8); 
+  border: 1px solid rgba(0,0,255, 0.8); 
 }
 
 #connect {
-  clear:both;
-  float:left;
-  margin:0 0 45px;
-  overflow:hidden;
-  padding:34px 0 0;
+  clear: both;
+  float: left;
+  margin: 10px;
+  overflow: hidden;
+  padding: 10px;
 }
 
 #connect a#twitter {
-  background:url(../images/icons.png) no-repeat;
-  color:#8d8d8d;
-  display:block;
-  float:left;
-  font-size:12px;
-  height:21px;
-  letter-spacing:.05em;
-  line-height:24px;
-  margin:0 28px 0 0;
-  padding:0 0 0 35px;
-  text-decoration:none;
+  background: url(../images/icons.png) no-repeat;
+  color: #000000;
+  display: block;
+  float: left;
+  font-size: 12px;
+  height: 21px;
+  letter-spacing: .05em;
+  line-height: 24px;
+  margin: 0 28px 0 0;
+  padding: 0 0 0 35px;
+  text-decoration: none;
 }
 
 #connect a#twitter:hover {
-  background:url(../images/icons.png) no-repeat 0 -22px;
+  background: url(../images/icons.png) no-repeat 0 -22px;
 }
 
 #connect a#facebook {
-  background:url(../images/icons.png) no-repeat 0 -44px;
-  color:#8d8d8d;
-  display:block;
-  float:left;
-  font-size:12px;
-  height:21px;
-  letter-spacing:.05em;
-  line-height:24px;
-  padding:0 0 0 17px;
-  text-decoration:none;
-  margin:0 28px 0 0;
+  background: url(../images/icons.png) no-repeat 0 -44px;
+  color: #000000;
+  display: block;
+  float: left;
+  font-size: 12px;
+  height: 21px;
+  letter-spacing: .05em;
+  line-height: 24px;
+  padding: 0 0 0 17px;
+  text-decoration: none;
+  margin: 0 28px 0 0;
 }
 
 connect a#facebook:hover {
-  background:url(../images/icons.png) no-repeat 0 -66px;
+  background: url(../images/icons.png) no-repeat 0 -66px;
 }
 
 #footnote {
-  color:#8d8d8d;
-  float:right;
-  font-size:12px;
-  letter-spacing:.05em;
-  line-height:20px;
-  margin:36px 0 0;
+  color: #000000;
+  float: right;
+  font-size: 12px;
+  letter-spacing: .05em;
+  line-height: 20px;
+  margin: 36px 0 0;
 }
