--- a/scripts/style.css
+++ b/scripts/style.css
@@ -601,15 +601,14 @@ a#twitter {
 #facebook {
   background: url(../images/icons.png) no-repeat 0 -44px;
   color: #000000;
-  display: block;
   float: left;
   font-size: 12px;
   height: 21px;
   letter-spacing: .05em;
   line-height: 24px;
-  padding: 10px;
+  padding: 0 0 0 17px;
   text-decoration: none;
-  margin: 10px;
+  margin: 0 28px 0 0;
 }
 
 #facebook:hover {
